--- a/ProvBrowser/View/Windows/MainWindow.xaml
+++ b/ProvBrowser/View/Windows/MainWindow.xaml
@@ -1,9 +1,13 @@
-﻿<Window x:Class="ProvBrowser.View.MainWindowView"
+﻿<Window x:Class="ProvBrowser.View.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProvBrowser.View"
+        
+        xmlns:local="clr-namespace:ProvBrowser.View.Windows"
+        
+        xmlns:comps="clr-namespace:ProvBrowser.View.Components"
+        
         xmlns:ns="clr-namespace:ProvBrowser.Utilities"
         xmlns:nav="clr-namespace:MVVM.Core.Locators;assembly=MVVM.Core"
         
@@ -18,10 +22,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <local:Header x:Name="MainHeader"/>
+        <comps:HeaderComponent x:Name="MainHeader"/>
 
-        <Grid Grid.Row="1" DataContext="{Binding MainContent}">
-            <UserControl Content="{Binding View}"/>
-        </Grid>
+        <UserControl Grid.Row="1" DataContext="{Binding Screen}" Content="{Binding View}">
+
+        </UserControl>
     </Grid>
 </Window>
