--- a/ProvBrowser/View/Components/BrowserItemComponent.xaml
+++ b/ProvBrowser/View/Components/BrowserItemComponent.xaml
@@ -1,15 +1,14 @@
-﻿<TabItem x:Class="ProvBrowser.View.BrowserView"
+﻿<TabItem x:Class="ProvBrowser.View.Components.BrowserItemComponent"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProvBrowser.View"
+             
+             xmlns:local="clr-namespace:ProvBrowser.View.Components"
              xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-         
+             
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Header="{Binding Title}" Style="{DynamicResource tabItemStandart}">
-    
-    
+             d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemStandart}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -17,10 +16,12 @@
         </Grid.RowDefinitions>
 
         <Grid Margin="1,1,1,1">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
+            
             <Grid Margin="0,0,1,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -30,22 +31,22 @@
                 <Button  Grid.Column="0" Command="{Binding WebBrowser.BackCommand}" Style="{DynamicResource btnControl}" Margin="0,0,1,0">
                     <Image Source="pack://application:,,,/Resources/arrow_right.png"/>
                 </Button>
-                <Button Grid.Column="1" Style="{DynamicResource btnControl}" Margin="1,0,1,0" >
+                <Button Grid.Column="1" Style="{DynamicResource btnControl}" Margin="1,0,1,0" Command="{Binding TestCommand}" >
 
                 </Button>
                 <Button Grid.Column="2" Command="{Binding WebBrowser.ForwardCommand}" Style="{DynamicResource btnControl}" Margin="1,0,1,0" >
                     <Image Source="pack://application:,,,/Resources/arrow_left.png"/>
                 </Button>
             </Grid>
-            <TextBox x:Name="UrlTextBox" Grid.Column="1" Text="{Binding Url, UpdateSourceTrigger=Explicit}" Style="{DynamicResource tbxStandart}" KeyUp="TextBox_KeyEnterUpdate">
+            <TextBox x:Name="UrlTextBox" Grid.Column="1" Text="{Binding Url, UpdateSourceTrigger=Explicit}" Style="{DynamicResource tbxStandart}">
             </TextBox>
         </Grid>
 
         <Grid Grid.Row="1" Margin="2,1,2,1">
             <cef:ChromiumWebBrowser Address="{Binding Url, Mode=TwoWay}"
-                                    Title="{Binding Title, Mode=OneWayToSource}"
-                                    WebBrowser="{Binding WebBrowser, Mode=OneWayToSource}"
-                                    >
+                                Title="{Binding Title, Mode=OneWayToSource}"
+                                WebBrowser="{Binding WebBrowser, Mode=OneWayToSource}"
+                                >
             </cef:ChromiumWebBrowser>
         </Grid>
     </Grid>
