--- a/ProvBrowser/View/Components/HeaderComponent.xaml
+++ b/ProvBrowser/View/Components/HeaderComponent.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ProvBrowser.View.Header"
+﻿<UserControl x:Class="ProvBrowser.View.Components.HeaderComponent"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProvBrowser.View"
+             xmlns:local="clr-namespace:ProvBrowser.View.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="#FF1E1E1E">
     <Grid
@@ -13,6 +13,7 @@
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="40"/>
         </Grid.ColumnDefinitions>
+        
         <Border Background="#FF1E1E1E" BorderBrush="Gray" BorderThickness="1">
             <TextBlock DockPanel.Dock="Left"
                        x:Name="HeaderText"
@@ -33,5 +34,6 @@
                 Style="{DynamicResource btnClose}"
                 Click="btnClose_Click"
                 >X</Button>
+        
     </Grid>
 </UserControl>
