--- a/ProvBrowser/View/Screens/MainScreen.xaml
+++ b/ProvBrowser/View/Screens/MainScreen.xaml
@@ -1,19 +1,14 @@
-﻿<UserControl x:Class="ProvBrowser.View.TabBrowswerView"
+﻿<UserControl x:Class="ProvBrowser.View.Screens.MainScreen"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProvBrowser.View"
+             xmlns:local="clr-namespace:ProvBrowser.View.Screens"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
-
-
     <Grid>
-        
-        <Grid DataContext="{Binding BrowsersCollection}">
-            <TabControl x:Name="MainTab" ItemsSource="{Binding Views}" Background="Black">
-            </TabControl>
-        </Grid>
+        <UserControl DataContext="{Binding MainContent}" Content="{Binding View}">
+
+        </UserControl>
     </Grid>
 </UserControl>
