--- a/ProvBrowser/View/Components/BrowserItemComponent.xaml
+++ b/ProvBrowser/View/Components/BrowserItemComponent.xaml
@@ -8,7 +8,7 @@
              xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemStandart}">
+             d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemStandart}" Header="{Binding Title}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
