--- a/ProvBrowser/View/Components/BrowsersTabComponent.xaml
+++ b/ProvBrowser/View/Components/BrowsersTabComponent.xaml
@@ -7,14 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TabControl x:Name="MainTab" ItemsSource="{Binding Test}" Background="Black">
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <UserControl Content="{Binding View}">
-                        
-                    </UserControl>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
+        <TabControl x:Name="MainTab" DataContext="{Binding BrowsersCollection}" ItemsSource="{Binding Views}" Background="Black">
+            
         </TabControl>
     </Grid>
 </UserControl>
