--- a/ProvBrowser/View/Components/BrowsersTabComponent.xaml
+++ b/ProvBrowser/View/Components/BrowsersTabComponent.xaml
@@ -4,10 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProvBrowser.View.Components"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction
+                        Command="{Binding LoadCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    
     <Grid>
-        <TabControl x:Name="MainTab" DataContext="{Binding BrowsersCollection}" ItemsSource="{Binding Views}" Background="Black">
+        <TabControl x:Name="MainTab" 
+                    ItemsSource="{Binding BrowsersTabs}" SelectedIndex="{Binding SelectedIndex}" 
+                    Style="{StaticResource tabControlTest}">
             
         </TabControl>
     </Grid>
