--- a/WpfLibrary/Styles/MainDictionary.xaml
+++ b/WpfLibrary/Styles/MainDictionary.xaml
@@ -1,17 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/ColorThemeDictionary.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="windowStandart" TargetType="{x:Type Window}">
-        <Setter Property="Background" Value="#FF1E1E1E"/>
+        <Setter Property="Background" Value="{StaticResource FirstBackfroundColor}"/>
+        <Setter Property="AllowsTransparency" Value="True"/>
         <Setter Property="WindowStyle" Value="None"/>
     </Style>
 
     <Style TargetType="{x:Type UserControl}">
-        <Setter Property="Background" Value="#FF1E1E1E"/>
+        <Setter Property="Background" Value="{StaticResource FirstBackfroundColor}"/>
     </Style>
-    
-    
+
+
     <Style x:Key="btnBase" TargetType="Button">
         <Setter Property="BorderThickness" Value="5"/>
         <Setter Property="FontSize" Value="18"/>
@@ -19,82 +23,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="#FF1E1E1E">
+                    <Border Background="{StaticResource FirstBackfroundColor}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
 
-    </Style>
-
-    
-    
-
-    <Style x:Key="btnClose" TargetType="Button" BasedOn="{StaticResource btnBase}">
-        <Setter Property="Foreground" Value="Red"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="#FF1E1E1E" BorderBrush="Red" BorderThickness="1">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <Border Background="#3b1c1a" BorderBrush="Red" BorderThickness="1">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-
-    <Style x:Key="btnHide" TargetType="Button" BasedOn="{StaticResource btnBase}">
-        <Setter Property="Foreground" Value="Yellow"/>
-        <Setter Property="BorderBrush" Value="Yellow"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="#FF1E1E1E" BorderBrush="Yellow" BorderThickness="1">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <Border Background="#404021" BorderBrush="Yellow" BorderThickness="1">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-        </Style.Triggers>
     </Style>
 
     <Style x:Key="btnControl" TargetType="Button" BasedOn="{StaticResource btnBase}">
-
-        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="#FF1E1E1E" BorderBrush="#3f51b5" BorderThickness="1">
+                    <Border Background="{StaticResource FirstBackfroundColor}" BorderBrush="{StaticResource InteractiveForegroundColor}" BorderThickness="1">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
@@ -106,7 +48,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border Background="#01041a" BorderBrush="#3f51b5" BorderThickness="1">
+                            <Border Background="{StaticResource EffectBackfroundColor}" BorderBrush="{StaticResource InteractiveForegroundColor}" BorderThickness="1">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
                         </ControlTemplate>
@@ -119,55 +61,18 @@
     <Style TargetType="{x:Type TextBox}">
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#FF2E2E2E"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Background" Value="{StaticResource SecondBackfroundColor}"/>
+        <Setter Property="Foreground" Value="{StaticResource MainForegroundColor}"/>
     </Style>
-    <Style x:Key="tbkStandart" TargetType="{x:Type TextBlock}">
+
+    <Style x:Key="tbkBase" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#FF2E2E2E"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="{StaticResource MainForegroundColor}"/>
     </Style>
 
-    <Style x:Key="tabItemStandart" TargetType="{x:Type TabItem}">
-        <Setter Property="FontSize" Value="18"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TabItem}">
-                    <Grid>
-                        <Border Name="Border" 
-                                Margin="1,1,1,1"
-                                Background="#FF2E2E2E"
-                                BorderBrush="White" BorderThickness="1">
-                            <ContentPresenter x:Name="ContentSite" VerticalAlignment="Center"
-                                              HorizontalAlignment="Center"
-                                              ContentSource="Header" Margin="12,2,12,2"
-                                              RecognizesAccessKey="True">
-                            </ContentPresenter>
-                        </Border>
-                    </Grid>
-        <ControlTemplate.Triggers>
-            <Trigger Property="IsSelected" Value="True">
-                <Setter Property="Panel.ZIndex" Value="100" />
-                <Setter TargetName="Border" Property="BorderBrush" Value="#3f51b5"/>
-                <Setter TargetName="Border" Property="Background" Value="#01041a" />
-                <Setter TargetName="Border" Property="BorderThickness" Value="1,1,1,0" />
-                <Setter Property="Foreground" Value="#3f51b5"/>
-            </Trigger>
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter TargetName="Border" Property="Background" Value="#3b1c1a" />
-                <Setter TargetName="Border" Property="BorderBrush" Value="Black" />
-                <Setter Property="Foreground" Value="LightGray" />
-            </Trigger>
-        </ControlTemplate.Triggers>
-    </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+    <Style x:Key="tbkStandart" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource tbkBase}">
+        <Setter Property="Background" Value="{StaticResource SecondBackfroundColor}"/>
     </Style>
     
-    
-
-
-
 </ResourceDictionary>
