--- a/ProvBrowser/View/Screens/MainScreen.xaml
+++ b/ProvBrowser/View/Screens/MainScreen.xaml
@@ -4,11 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProvBrowser.View.Screens"
+             
+             xmlns:nav="clr-namespace:WpfLibrary.Navigation;assembly=WpfLibrary"
+             
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <UserControl DataContext="{Binding MainContent}" Content="{Binding View}">
+        <nav:NavigationControl DataContext="{Binding MainViewModel}" Content="{Binding View}">
 
-        </UserControl>
+        </nav:NavigationControl>
     </Grid>
 </UserControl>
