--- a/WpfLibrary/Styles/MainDictionary.xaml
+++ b/WpfLibrary/Styles/MainDictionary.xaml
@@ -33,6 +33,9 @@
     </Style>
 
     <Style x:Key="btnControl" TargetType="Button" BasedOn="{StaticResource btnBase}">
+
+        <Setter Property="Foreground" Value="{StaticResource InteractiveForegroundColor}"/>
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
