Добавление и внедрение транскрибации и записи звука.

--- a/ProvBrowser/App.xaml
+++ b/ProvBrowser/App.xaml
@@ -8,6 +8,8 @@
                 <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/MainDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/TitleBarDictionary.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/TabDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/ToggleButtonDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/WpfLibrary;component/Styles/IconsDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
