--- a/ProvBrowser/View/Components/BrowserItemComponent.xaml
+++ b/ProvBrowser/View/Components/BrowserItemComponent.xaml
@@ -6,6 +6,7 @@
              
              xmlns:local="clr-namespace:ProvBrowser.View.Components"
              xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemStandart}" Header="{Binding Title}">
@@ -18,8 +19,9 @@
         <Grid Margin="1,1,1,1">
             
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250"/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
             
             <Grid Margin="0,0,1,0">
@@ -31,17 +33,17 @@
                 <Button Grid.Column="0" 
                         Command="{Binding BackCommand}" 
                         Style="{StaticResource btnControl}" Margin="0,0,1,0">
-                    <Image Source="pack://application:,,,/Resources/arrow_right.png"/>
+                    <Path Data="{StaticResource ArrowLeftIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
                 <Button Grid.Column="1" 
                         Command="{Binding ReloadCommand}"
-                        Style="{StaticResource btnControl}" Margin="1,0,1,0"  >
-
+                        Style="{StaticResource btnControl}" Margin="1,0,1,0">
+                    <Path Data="{StaticResource ArrowRotateIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
                 <Button Grid.Column="2" 
                         Command="{Binding ForwardCommand}" 
-                        Style="{StaticResource btnControl}" Margin="1,0,1,0" >
-                    <Image Source="pack://application:,,,/Resources/arrow_left.png"/>
+                        Style="{StaticResource btnControl}" Margin="1,0,1,0">
+                    <Path Data="{StaticResource ArrowRightIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
             </Grid>
             <TextBox x:Name="UrlTextBox" 
@@ -49,6 +51,20 @@
                      Text="{Binding Url, UpdateSourceTrigger=Explicit}" 
                      KeyDown="TextBox_KeyEnterUpdate">
             </TextBox>
+            <ToggleButton Grid.Column="2" 
+                    Style="{StaticResource MainToggleButtonStyle}"
+                    Margin="1,0,1,0">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Checked">
+                        <i:InvokeCommandAction Command="{Binding RecordCommand}"/>
+                    </i:EventTrigger>
+                    <i:EventTrigger EventName="Unchecked">
+                        <i:InvokeCommandAction Command="{Binding RecordStopCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+
+                <Path Data="{StaticResource MicrophoneIcon}" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ToggleButton}}"/>
+            </ToggleButton>
         </Grid>
 
         <Grid Grid.Row="1" Margin="2,1,2,1">
