--- a/WpfLibrary/Styles/MainDictionary.xaml
+++ b/WpfLibrary/Styles/MainDictionary.xaml
@@ -40,7 +40,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border Background="{StaticResource FirstBackfroundColor}" BorderBrush="{StaticResource InteractiveForegroundColor}" BorderThickness="1">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Content="{TemplateBinding Content}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
