--- a/ProvBrowser.View/Components/BrowsersTabComponent.xaml
+++ b/ProvBrowser.View/Components/BrowsersTabComponent.xaml
@@ -3,8 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             
              xmlns:local="clr-namespace:ProvBrowser.View.Components"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:nav="clr-namespace:WpfLibrary.Navigation;assembly=WpfLibrary"
+             
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <i:Interaction.Triggers>
@@ -15,10 +18,11 @@
     </i:Interaction.Triggers>
     
     <Grid>
-        <TabControl x:Name="MainTab" 
-                    ItemsSource="{Binding BrowsersTabs}" SelectedIndex="{Binding SelectedIndex}" 
-                    Style="{StaticResource tabControlTest}">
+        <nav:NavigationTabControl x:Name="MainTab" 
+                                  DataContext="{Binding BrowsersTabs}"
+                                  SelectedIndex="{Binding SelectedIndex}" 
+                                  Style="{StaticResource tabControlTest}">
             
-        </TabControl>
+        </nav:NavigationTabControl>
     </Grid>
 </UserControl>
