--- a/ProvBrowser.View/Components/TabItems/AddTabitemComponent.xaml
+++ b/ProvBrowser.View/Components/TabItems/AddTabitemComponent.xaml
@@ -1,11 +1,22 @@
-﻿<TabItem x:Class="ProvBrowser.View.Components.AddTabitemComponent"
+﻿<TabItem x:Class="ProvBrowser.View.Components.TabItems.AddTabitemComponent"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProvBrowser.View.Components"
+         
+             xmlns:local="clr-namespace:ProvBrowser.View.Components.TabItems"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+         
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemBase}" Header="+">
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="GotFocus">
+            <i:InvokeCommandAction
+                    Command="{Binding GotFocusCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
     <Grid>
             
     </Grid>
