--- a/ProvBrowser.View/Components/TabItems/BrowserItemComponent.xaml
+++ b/ProvBrowser.View/Components/TabItems/BrowserItemComponent.xaml
@@ -1,15 +1,17 @@
-﻿<TabItem x:Class="ProvBrowser.View.Components.BrowserItemComponent"
+﻿<TabItem x:Class="ProvBrowser.View.Components.TabItems.BrowserItemComponent"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             
-             xmlns:local="clr-namespace:ProvBrowser.View.Components"
+         
+             xmlns:local="clr-namespace:ProvBrowser.View.Components.TabItems"
              xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             
+         
              mc:Ignorable="d" 
+         
              d:DesignHeight="450" d:DesignWidth="800" Style="{StaticResource tabItemStandart}" Header="{Binding Title}">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -17,13 +19,13 @@
         </Grid.RowDefinitions>
 
         <Grid Margin="1,1,1,1">
-            
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
-            
+
             <Grid Margin="0,0,1,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -31,29 +33,29 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="0" 
-                        Command="{Binding BackCommand}" 
-                        Style="{StaticResource btnControl}" Margin="0,0,1,0">
+                    Command="{Binding BackCommand}" 
+                    Style="{StaticResource btnControl}" Margin="0,0,1,0">
                     <Path Data="{StaticResource ArrowLeftIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
                 <Button Grid.Column="1" 
-                        Command="{Binding ReloadCommand}"
-                        Style="{StaticResource btnControl}" Margin="1,0,1,0">
+                    Command="{Binding ReloadCommand}"
+                    Style="{StaticResource btnControl}" Margin="1,0,1,0">
                     <Path Data="{StaticResource ArrowRotateIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
                 <Button Grid.Column="2" 
-                        Command="{Binding ForwardCommand}" 
-                        Style="{StaticResource btnControl}" Margin="1,0,1,0">
+                    Command="{Binding ForwardCommand}" 
+                    Style="{StaticResource btnControl}" Margin="1,0,1,0">
                     <Path Data="{StaticResource ArrowRightIcon}" Fill="{StaticResource InteractiveForegroundColor}"/>
                 </Button>
             </Grid>
             <TextBox x:Name="UrlTextBox" 
-                     Grid.Column="1" 
-                     Text="{Binding Url, UpdateSourceTrigger=Explicit}" 
-                     KeyDown="TextBox_KeyEnterUpdate">
+                 Grid.Column="1" 
+                 Text="{Binding Url, UpdateSourceTrigger=Explicit}" 
+                 KeyDown="TextBox_KeyEnterUpdate">
             </TextBox>
             <ToggleButton Grid.Column="2" 
-                    Style="{StaticResource MainToggleButtonStyle}"
-                    Margin="1,0,1,0">
+                Style="{StaticResource MainToggleButtonStyle}"
+                Margin="1,0,1,0">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="Checked">
                         <i:InvokeCommandAction Command="{Binding RecordCommand}"/>
@@ -69,9 +71,9 @@
 
         <Grid Grid.Row="1" Margin="2,1,2,1">
             <cef:ChromiumWebBrowser Address="{Binding Url, Mode=TwoWay}"
-                                Title="{Binding BrowserTitle, Mode=OneWayToSource}"
-                                WebBrowser="{Binding WebBrowser, Mode=OneWayToSource}"
-                                >
+                            Title="{Binding BrowserTitle, Mode=OneWayToSource}"
+                            WebBrowser="{Binding WebBrowser, Mode=OneWayToSource}"
+                            >
             </cef:ChromiumWebBrowser>
         </Grid>
     </Grid>
